# airbnb_clone

./: .gitignore  Django_Challenge.md  pyproject.toml  render.yaml
bookings/: admin.py  models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py  0003_alter_category_kind.py
common/: models.py
config/: authentication.py  settings.py  urls.py  wsgi.py
direct_msg/: admin.py  apps.py  models.py
direct_msg/migrations/: 0001_initial.py  0002_alter_message_room_alter_message_user.py
experiences/: admin.py  models.py  serializers.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_details_and_more.py  0003_alter_experience_category_alter_experience_host.py  0004_alter_experience_perks.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py
medias/: admin.py  models.py  serializers.py  urls.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_file_alter_video_experience_and_more.py  0003_alter_photo_room.py
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py  (+1 more)
rooms/: admin.py  calculator.py  calculator2.py  models.py  serializers.py  tests.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  (+3 more)
users/: admin.py  models.py  serializers.py  test  urls.py  views.py
wishlists/: admin.py  models.py  serializers.py  urls.py  views.py
(+8 files in other folders)
